2020-06-21  Lauro Moura  <lmoura@igalia.com>

        WebDriver: several tests in imported/selenium/py/test/selenium/webdriver/common/visibility_tests.py fail
        https://bugs.webkit.org/show_bug.cgi?id=182334

        Unreviewed test gardening.

        The last two remaining tests from this bug started passing after the
        imported selenium tests were updated in r263264.

        * TestExpectations.json:

2020-06-21  Lauro Moura  <lmoura@igalia.com>

        WebDriver: two selenium alert tests are failing
        https://bugs.webkit.org/show_bug.cgi?id=181727

        Unreviewed test gardening.

        These tests also have been passing since r262861.

        * TestExpectations.json:

2020-06-21  Lauro Moura  <lmoura@igalia.com>

        [WebDriver][GTK] Gardening failures related to missing selenium files

        Unreviewed test gardening.

        The relative_by_tests require some JS fragments built by Bazel,
        Selenium's build tool.

        * TestExpectations.json:

2020-06-19  Lauro Moura  <lmoura@igalia.com>

        [WebDriver][GTK] Some tests fails to click elements because element is outside visible rect
        https://bugs.webkit.org/show_bug.cgi?id=211330

        Unreviewed test gardening.

        These tests have been passing since r262861 landed.

        * TestExpectations.json:

2020-06-19  Lauro Moura  <lmoura@igalia.com>

        [WebDriver][WPE] Update imported selenium to a version with the WPE WebDriver
        https://bugs.webkit.org/show_bug.cgi?id=213263

        Reviewed by Carlos Garcia Campos.

        Updated Selenium tests to 0d7e57a7079c, which added the WPE WebDriver.

        * imported/selenium/common/src/web/button.png: Added.
        * imported/selenium/common/src/web/formPage.html:
        * imported/selenium/common/src/web/inputs.html:
        * imported/selenium/common/src/web/relative_locators.html: Added.
        * imported/selenium/common/src/web/screen/screen.css: